# FirefoxRouter

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build-and-release.yml  compile-for-os.yml
src/: config.rs  glob.rs  log_macro.rs  main.rs  util.rs
