[package]
name = "FirefoxRouter"
version = "0.1.1"
edition = "2024"
build = "build.rs"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }
sysinfo = { version = "0.38.2", features = ["system"], default-features = false }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 's'
lto = true
debug = "line-tables-only"
