[package]
name = "FirefoxRouter"
version = "0.1.1"
edition = "2024"
build = "build.rs"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }
dotenvy = "0.15.7"
regex-lite = "0.1.9"
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0.149"
sysinfo = { version = "0.38.2", features = ["system"], default-features = false }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 's'
lto = true
debug = "line-tables-only"
